# mlops-zoomcamp

./: pyproject.toml
cohorts/2024/01-intro/: homework.ipynb
cohorts/2024/02-experiment-tracking/notebooks/: 2.2-getting_started_with_mlflow.ipynb
cohorts/2024/03-orchestration/03.0-introduction-ml-pipelines-and-mage/: annotations.md
cohorts/2024/03-orchestration/mage-quickstart/: docker-compose.yml
cohorts/2024/03-orchestration/mage-quickstart/your_first_project/: metadata.yaml
cohorts/2024/03-orchestration/mage-quickstart/your_first_project/data_exporters/: export.py  export_model.py  log_model.py
cohorts/2024/03-orchestration/mage-quickstart/your_first_project/data_loaders/: ingestion.py
cohorts/2024/03-orchestration/mage-quickstart/your_first_project/pipelines/mlops_zoomcamp_homework/: metadata.yaml
cohorts/2024/03-orchestration/mage-quickstart/your_first_project/transformers/: cleaning.py  holy_sumo.py  model_training.py
