[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
mlflow = "^2.13.0"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
hyperopt = "^0.2.7"
xgboost = "^2.0.3"
mage-ai = "^0.9.71"
botocore = "^1.34.122"
dask = {extras = ["dataframe"], version = "^2024.5.2"}

